# Langchain-chatbot

./: .gitattributes  .gitignore  README.md  app.py  build.sh  c.py  combined.py  components.py  pdf.py  requirements.txt  run.sh  scrapper.ipynb  vectorstore.ipynb
backend/: README.md  db_connect.py  logging_config.py  main.py  models.py  pyproject.toml  rag_prompt.md
backend/api/: README.md  __init__.py  app.py  run.sh
backend/data_insertion/: db_operations.py  insertion.py
backend/evaluators/: evaluate_rag.py
backend/langgraph_comp/: graph.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: app.js  auth.service.js  chat.service.js  main.js  style.css
frontend/src/chat/: chat.component.js  chat.controller.js  chat.html
frontend/src/login/: login.component.js  login.html  (+1 more)
lang/Scripts/: dumppdf.py  get_gprof  get_objgraph  jsondiff  jsonpatch  jsonpointer  pdf2txt.py  pygrun  undill
lang/conda-meta/: bzip2-1.0.8-h2bbff1b_6.json  ca-certificates-2024.3.11-haa95532_0.json  history  libffi-3.4.4-hd77b12b_1.json  openssl-1.1.1w-h2bbff1b_0.json  pip-24.0-py311haa95532_0.json  python-3.11.0-h966fe2a_3.json  setuptools-69.5.1-py311haa95532_0.json  sqlite-3.45.3-h2bbff1b_0.json  tk-8.6.14-h0416ee5_0.json  tzdata-2024a-h04d1e81_0.json  vc-14.2-h2eaa2aa_1.json  vs2015_runtime-14.29.30133-h43f2093_3.json  wheel-0.43.0-py311haa95532_0.json  xz-5.4.6-h8cc25b3_1.json  zlib-1.2.13-h8cc25b3_1.json
lang/etc/: aau_token
secondaryfrontend/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
secondaryfrontend/src/: index.html  styles.css
(+11 files in other folders)
